added a variant to beautify the list

--- a/src/styles/FinishSection.module.scss
+++ b/src/styles/FinishSection.module.scss
@@ -6,7 +6,9 @@
 
 .navigation {
   button {
-    display: inline-block;
+    //display: inline-flex;
+    //align-items: center;
+    //justify-content: center;
     width: 32px;
     height: 32px;
     border: none;
