--- a/src/styles/Sections.module.scss
+++ b/src/styles/Sections.module.scss
@@ -1,5 +1,5 @@
 .list {
-  padding: 20px;
+  padding: 0px;
 
   font-family: 'Inter';
   font-style: normal;
@@ -11,5 +11,25 @@
 
   li {
     margin-bottom: 14px;
+    background-image: url(/list_dot.svg);
+    background-repeat: no-repeat;
+    background-position-y: 10px;
+    padding-left: 20px;
   }
+
+  li::marker {
+    content: '';
+  }
+
+  // add class dependency instead of nth-child
+  li:nth-child(4) {
+    background-image: url(/active_list_icon.svg);
+    background-repeat: no-repeat;
+    background-position-y: -7px;
+    padding-left: 20px;
+  }
+  li:nth-child(4)::marker{
+    content: '';
+  }
+
 }
