--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,7 +26,7 @@ h2 {
     margin: 0;
 }
 
-p {
+p, select > option, select {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
