closing the preview mode message

--- a/src/styles/Sections.module.scss
+++ b/src/styles/Sections.module.scss
@@ -27,6 +27,7 @@
     background-repeat: no-repeat;
     background-position-y: -7px;
     padding-left: 20px;
+    color: #203B54;
   }
   li:nth-child(4)::marker{
     content: '';
