--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components {
+    .member {
+        @apply ml-[-8px] border-[#FFFFFF] w-8 h-8 rounded-full
+    }
+    .header-button {
+        @apply bg-[#F1F1F1] w-8 h-8 rounded-full bg-[#F1F1F1]
+    }
+}
+
 body {
     margin: 0;
     padding: 0;
